# drf-auth

./: README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
coffehouseapi_project/: asgi.py  settings.py  urls.py  wsgi.py
coffehouseapp/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
coffehouseapp/migrations/: 0001_initial.py
